# bot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  build_exe.bat  build_linux_packages.ps1  build_linux_packages.sh  cliff.toml  installer.iss  pyproject.toml  run_inzen_cli_bot.py  test.md
.github/workflows/: ci.yml  publish.yml  release-assets.yml
bot/: __init__.py  config.py  credentials.py  main.py  setup.py
bot/providers/: __init__.py  anthropic.py  base.py  llamacpp.py  ollama.py  openai.py
packaging/linux/: postinstall.sh  postremove.sh
tests/: conftest.py  test_config.py  test_main.py  test_providers.py
tools/: build_linux_packages.py
