[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inzen-bot"
version = "0.3.1"
description = "Multi-provider AI chatbot for the terminal"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
keywords = ["cli", "ai", "chatbot", "llm", "terminal", "anthropic", "openai", "ollama"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/benwalkerai/bot"
Issues = "https://github.com/benwalkerai/bot/issues"

[project.scripts]
bot = "bot.main:cli"

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "ruff"]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]

[dependency-groups]
dev = [
    "build>=1.4.2",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "twine>=6.2.0",
    "ruff>=0.4.0",
    "git-cliff>=2.13.1",
    "bump-my-version>=1.3.0",
]

[tool.bumpversion]
current_version = "0.3.1"
commit = true
tag = true
tag_name = "v{new_version}"
message = "chore: bump version to {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
# E = pycodestyle errors, F = pyflakes, I = isort, UP = pyupgrade